tests/ui/feature-gates/feature-gate-impl-stability.stderr
error[E0658]: used internally to mark impl as unstable
  --> $DIR/feature-gate-impl-stability.rs:6:1
   |
LL | #[unstable_feature_bound(feat_foo)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(impl_stability)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
